--- a/404.html
+++ b/404.html
@@ -704,6 +704,13 @@
   
   
   
+  <h2>Latest</h2>
+  <ul>
+    
+      <li><a href="/working-papers/jmp/">Global Prices, Trade Protection, and Internal Migration: Evidence from Indonesia</a></li>
+    
+  </ul>
+  
 
 </div>
 
