--- a/index.html
+++ b/index.html
@@ -998,8 +998,8 @@
   <div class="col-12 col-lg-8">
 
     <h4 id="global-prices-trade-protection-and-internal-migration-evidence-from-indonesia"><strong>Global Prices, Trade Protection, and Internal Migration: Evidence from Indonesia</strong></h4>
-<p><a href="/files/Rizki%20Siregar%20-%20JMP.pdf"><em>[Job Market Paper]</em></a>
-<sub><sup>Abstract: I study how regions respond to price shocks when there is internal migration. I examine Indonesia in the 2000s as it faced both a commodity boom and initiated its import restrictions on rice, a staple food for its large population. I measure exposure to shocks using the variation in the importance of palm-oil and rice across district economies. I find that districts exposed to palm-oil price shocks had significantly higher expenditure per capita and hence received more migration. However, exposure to rice price shocks did not materialize as higher purchasing power to exposed districts. I estimate that the overall welfare increased by 0.39% in Indonesia over the period of 2005 to 2010, with one third of the increase is accounted for internal migration.</sup></sub></p>
+<p><a href="/files/Rizki%20Siregar%20-%20JMP.pdf"><em>[Job Market Paper]</em></a></p>
+<h6 id="abstract-i-study-how-regions-respond-to-price-shocks-when-there-is-internal-migration-i-examine-indonesia-in-the-2000s-as-it-faced-both-a-commodity-boom-and-initiated-its-import-restrictions-on-rice-a-staple-food-for-its-large-population-i-measure-exposure-to-shocks-using-the-variation-in-the-importance-of-palm-oil-and-rice-across-district-economies-i-find-that-districts-exposed-to-palm-oil-price-shocks-had-significantly-higher-expenditure-per-capita-and-hence-received-more-migration-however-exposure-to-rice-price-shocks-did-not-materialize-as-higher-purchasing-power-to-exposed-districts-i-estimate-that-the-overall-welfare-increased-by-039-in-indonesia-over-the-period-of-2005-to-2010-with-one-third-of-the-increase-is-accounted-for-internal-migration">Abstract: I study how regions respond to price shocks when there is internal migration. I examine Indonesia in the 2000s as it faced both a commodity boom and initiated its import restrictions on rice, a staple food for its large population. I measure exposure to shocks using the variation in the importance of palm-oil and rice across district economies. I find that districts exposed to palm-oil price shocks had significantly higher expenditure per capita and hence received more migration. However, exposure to rice price shocks did not materialize as higher purchasing power to exposed districts. I estimate that the overall welfare increased by 0.39% in Indonesia over the period of 2005 to 2010, with one third of the increase is accounted for internal migration.</h6>
 <h4 id="understanding-the-global-trade-and-public-health-regime-complex-a-case-study-on-breastfeeding-and-commercial-breastmilk-substitutes"><strong>Understanding the Global Trade and Public Health Regime Complex: A Case Study on Breastfeeding and Commercial Breastmilk Substitutes</strong></h4>
 <p>with Katheryn Russ, Phillip Baker, Michaela Byrd, Manho Kang, Hammad Zahid, and David McCoy</p>
 
@@ -1352,13 +1352,11 @@
   <div class="col-12 col-lg-8">
 
     <h4 id="reading-the-corona-extraordinary-measures-during-an-extraordinary-time"><strong>Reading the Corona: Extraordinary Measures during an Extraordinary Time</strong></h4>
-<p><br />The Indonesia Project Australian National University Global Seminar Series (25 March 2020)
-<br /><a href="https://www.youtube.com/watch?v=0cb1mWYLozA&amp;feature=youtu.be" target="_blank" rel="noopener">Youtube</a>, <a href="/files/handout%20-%20Siregar%20et%20al.pdf">Slides</a>
-<br />
-<br /></p>
+<p>The Indonesia Project Australian National University Global Seminar Series (25 March 2020)
+<a href="https://www.youtube.com/watch?v=0cb1mWYLozA&amp;feature=youtu.be" target="_blank" rel="noopener">Youtube</a>, <a href="/files/handout%20-%20Siregar%20et%20al.pdf">Slides</a></p>
 <h4 id="menempuh-pendidikan-doktoral-di-amerika-serikat-_preparing-for-a-doctoral-program-in-the-us_"><strong>Menempuh Pendidikan Doktoral di Amerika Serikat (<em>Preparing for a Doctoral Program in the US</em>)</strong></h4>
-<p><br />RISED (8 June 2020)
-<br /><a href="https://www.youtube.com/watch?v=7huSU5H9Tcc&amp;feature=youtu.be" target="_blank" rel="noopener">Youtube</a>, <a href="/files/Menempuh%20Pendidikan%20Doktoral%20di%20AS%20-%20handout%20-%2013%20Juni%202020.pdf">Slides</a></p>
+<p>RISED (8 June 2020)
+<a href="https://www.youtube.com/watch?v=7huSU5H9Tcc&amp;feature=youtu.be" target="_blank" rel="noopener">Youtube</a>, <a href="/files/Menempuh%20Pendidikan%20Doktoral%20di%20AS%20-%20handout%20-%2013%20Juni%202020.pdf">Slides</a></p>
 
 
     
