--- a/index.html
+++ b/index.html
@@ -1354,12 +1354,12 @@
   <div class="col-12 col-lg-8">
 
     <h4 id="reading-the-corona-extraordinary-measures-during-an-extraordinary-time"><strong>Reading the Corona: Extraordinary Measures during an Extraordinary Time</strong></h4>
-<p>The Indonesia Project Australian National University Global Seminar Series (25 March 2020)
+<p>The Indonesia Project Australian National University Global Seminar Series (25 March 2020)<br/>
 <a href="https://www.youtube.com/watch?v=0cb1mWYLozA&amp;feature=youtu.be" target="_blank" rel="noopener">Youtube</a>, <a href="/files/handout%20-%20Siregar%20et%20al.pdf">Slides</a>
 <br />
 <br /></p>
 <h4 id="menempuh-pendidikan-doktoral-di-amerika-serikat-_preparing-for-a-doctoral-program-in-the-us_"><strong>Menempuh Pendidikan Doktoral di Amerika Serikat (<em>Preparing for a Doctoral Program in the US</em>)</strong></h4>
-<p>RISED (8 June 2020)
+<p>RISED (8 June 2020)<br/>
 <a href="https://www.youtube.com/watch?v=7huSU5H9Tcc&amp;feature=youtu.be" target="_blank" rel="noopener">Youtube</a>, <a href="/files/Menempuh%20Pendidikan%20Doktoral%20di%20AS%20-%20handout%20-%2013%20Juni%202020.pdf">Slides</a></p>
 
 
