--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
     
     <h1>Biography</h1>
 
-    <p>I am a PhD Candidate in economics at UC Davis. My research interests are international trade, labor economics, and spatial economics.</p>
+    <p>I am a PhD Candidate in Economics at UC Davis. My research interests are international trade, labor economics, and spatial economics.</p>
 <p>I am on the job market during the 2020-21 academic year. I will be available for interviews at the ASSA 2021 Virtual Annual Meeting and the EEA 2020 Virtual Meeting.</p>
 <p><a href="/files/Rizki%20Siregar%20-%20CV.pdf">Curriculum Vitae</a></p>
 
@@ -999,7 +999,7 @@
 
     <h4 id="global-prices-trade-protection-and-internal-migration-evidence-from-indonesia"><strong>Global Prices, Trade Protection, and Internal Migration: Evidence from Indonesia</strong></h4>
 <p><a href="/files/Rizki%20Siregar%20-%20JMP.pdf"><em>[Job Market Paper]</em></a></p>
-<p><em>Abstract</em>: I study how regions respond to price shocks when there is internal migration. I examine Indonesia in the 2000s as it faced both a commodity boom and initiated its import restrictions on rice, a staple food for its large population. I measure exposure to shocks using the variation in the importance of palm-oil and rice across district economies. I find that districts exposed to palm-oil price shocks had significantly higher expenditure per capita and hence received more migration. However, exposure to rice price shocks did not materialize as higher purchasing power to exposed districts. I estimate that the overall welfare increased by 0.39% in Indonesia over the period of 2005 to 2010, with one third of the increase is accounted for internal migration.
+<p><em>Abstract</em>: I study how regions respond to price shocks in the presence of internal migration. I examine Indonesia in the 2000s as it faced both a commodity boom and initiated its import restrictions on rice, a staple food for its large population. I measure exposure to shocks using the variation in the importance of palm-oil and rice across district economies. I find that districts exposed to palm-oil price shocks had temporarily higher expenditure per capita. Hence, they received more migration. However, exposure to rice price shocks did not materialize as higher purchasing power to exposed districts. I estimate that the overall welfare increased by 0.39% in Indonesia between 2005 and 2010, and that one third of this increase is associated with internal migration.
 <br />
 <br /></p>
 <h4 id="understanding-the-global-trade-and-public-health-regime-complex-a-case-study-on-breastfeeding-and-commercial-breastmilk-substitutes"><strong>Understanding the Global Trade and Public Health Regime Complex: A Case Study on Breastfeeding and Commercial Breastmilk Substitutes</strong></h4>
@@ -1229,7 +1229,7 @@
   
   <div class="col-12 col-lg-8">
 
-    <p>I was an Associate Instructor for ECN 160B &ldquo;International Macroeconomics&rdquo; at UC Davis in the spring of 2019. Here is the <a href="/files/Syllabus%20-%20ECN%20160B%20-%20Siregar.pdf">syllabus</a>.</p>
+    <p>I was an Associate Instructor for ECN 160B &ldquo;International Macroeconomics&rdquo; at UC Davis in the Spring of 2019. Here is the <a href="/files/Syllabus%20-%20ECN%20160B%20-%20Siregar.pdf">syllabus</a>.</p>
 <p>Previously, I worked as a Teaching Assistant in the following classes at UC Davis:</p>
 <ul>
 <li>Money, Banks, and Financial Institution (Dr. Derek Stimel)</li>
@@ -1238,7 +1238,7 @@
 <li>US Economic History post-Civil War (Dr. Janine Wilson)</li>
 <li>Economic Development (Prof. Wing Woo, Dr. Janine Wilson)</li>
 </ul>
-<p>I also taught as a lecturer at Universitas Indonesia for the following classes:</p>
+<p>I also taught as a Lecturer at Universitas Indonesia for the following classes:</p>
 <ul>
 <li>International Economics</li>
 <li>Mathematics for Economics</li>
