--- a/working-papers/jmp/index.html
+++ b/working-papers/jmp/index.html
@@ -973,7 +973,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://rsiregar.github.io/">Rizki Nauli Siregar</a></h5>
       <h6 class="card-subtitle">PhD Candidate in Economics</h6>
-      <p class="card-text">I am a PhD Candidate in economics at UC Davis. My research interests are international trade, labor economics, and spatial economics.</p>
+      <p class="card-text">I am a PhD Candidate in Economics at UC Davis. My research interests are international trade, labor economics, and spatial economics.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
