--- a/404.html
+++ b/404.html
@@ -526,7 +526,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#wip"><span>Works in Progress</span></a>
+          <a class="nav-link " href="/#wip"><span>Work in Progress</span></a>
         </li>
 
         
