--- a/working-papers/jmp/index.html
+++ b/working-papers/jmp/index.html
@@ -531,7 +531,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#wip"><span>Works in Progress</span></a>
+          <a class="nav-link " href="/#wip"><span>Work in Progress</span></a>
         </li>
 
         
