Edit CV and WIP

--- a/wip/index.html
+++ b/wip/index.html
@@ -724,6 +724,9 @@
 <h6 id="virtual-migration-online-labor-markets-and-spatial-labor-misallocation"><strong>Virtual Migration: Online Labor Markets and Spatial Labor Misallocation</strong></h6>
 <p>with Samuel Bazzi, Bo Cowgill, and Zoe Cullen
 <a href="https://www.socialscienceregistry.org/trials/2444" target="_blank" rel="noopener">AEA RCT registry</a></p>
+<h6 id="price-divergence-in-times-of-protectionist-regime"><strong>Price Divergence in Times of Protectionist Regime</strong></h6>
+<p>with Teguh Dartanto</p>
+<h6 id="the-determinants-of-initial-negotiating-rights"><strong>The Determinants of Initial Negotiating Rights</strong></h6>
 </div>
   
 
