--- a/index.html
+++ b/index.html
@@ -998,8 +998,8 @@
   <div class="col-12 col-lg-8">
 
     <h4 id="global-prices-trade-protection-and-internal-migration-evidence-from-indonesia"><strong>Global Prices, Trade Protection, and Internal Migration: Evidence from Indonesia</strong></h4>
-<p><em>[Job Market Paper]</em></p>
-<p><em>Abstract</em>: I study how regions respond to price shocks in the presence of internal migration. I examine Indonesia in the 2000s as it faced a commodity boom and initiated its trade protection on rice, a staple food for its large population. I expoit the variation in the importance of palm-oil and rice across district economies to measure local exposure to shocks. I find that districts exposed to palm-oil price shocks had higher real expenditure per capita compared to the non-exposed ones. These exposed districts also received more migration, providing the evidence that local palm-oil price shocks were no longer local. Meanwhile, exposure to rice price shocks did not materialize as higher purchasing power to exposed districts compared to the non-exposed ones. I estimate that the overall welfare increased by 0.39% in Indonesia between 2005 and 2010, and one third of the increase can be accounted for by internal migration.
+<p><a href="/files/Rizki%20Siregar%20-%20JMP.pdf"><em>[Job Market Paper]</em></a></p>
+<p><em>Abstract</em>: I study how regions respond to price shocks in the presence of internal migration. I examine Indonesia in the 2000s as it faced a commodity boom and initiated its trade protection on rice, a staple food for its large population. I use the variation in the potential share of palm-oil and rice sector across district economies to measure local exposure to shocks. I find that districts exposed to palm-oil price shocks had temporarily higher real expenditure per capita compared to the non-exposed ones. These exposed districts also received more migration, providing the evidence that palm-oil price shocks were no longer localized. Meanwhile, exposure to rice price shocks did not materialize as higher purchasing power to exposed districts compared to the non-exposed ones. I estimate that the overall welfare increased by 0.39% in Indonesia between 2005 and 2010, and one third of the increase can be accounted for by internal migration.
 <br />
 <br /></p>
 <h4 id="understanding-the-global-trade-and-public-health-regime-complex-a-case-study-on-breastfeeding-and-commercial-breastmilk-substitutes"><strong>Understanding the Global Trade and Public Health Regime Complex: A Case Study on Breastfeeding and Commercial Breastmilk Substitutes</strong></h4>
@@ -1118,7 +1118,12 @@
 <p><br /></p>
 <h4 id="virtual-migration-online-labor-markets-and-spatial-labor-misallocation"><strong>Virtual Migration: Online Labor Markets and Spatial Labor Misallocation</strong></h4>
 <p>with Samuel Bazzi, Bo Cowgill, and Zoe Cullen<br>
-<a href="https://www.socialscienceregistry.org/trials/2444" target="_blank" rel="noopener">[AEA RCT registry]</a></p>
+<a href="https://www.socialscienceregistry.org/trials/2444" target="_blank" rel="noopener">[AEA RCT registry]</a>
+<br /></p>
+<h4 id="price-divergence-in-times-of-trade-protection"><strong>Price Divergence in Times of Trade Protection</strong></h4>
+<p>with Teguh Dartanto
+<br /></p>
+<h4 id="the-determinants-of-initial-negotiating-rights"><strong>The Determinants of Initial Negotiating Rights</strong></h4>
 
 
     
