update typo and bio

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
     <h1>Biography</h1>
 
     <p>I am a PhD Candidate in Economics at UC Davis. My research interests are international trade, labor economics, and spatial economics.</p>
-<p>I am on the job market during the 2020-21 academic year. I will be available for interviews at the ASSA 2021 Virtual Annual Meeting and the EEA 2020 Virtual Meeting.</p>
+<p>I am on the job market during the 2020-21 academic year. I will be available for interviews at the EEA 2020 Virtual Meeting and the ASSA 2021 Virtual Annual Meeting.</p>
 <p><a href="/files/Rizki%20Siregar%20-%20CV.pdf">Curriculum Vitae</a></p>
 
 
@@ -999,7 +999,7 @@
 
     <h4 id="global-prices-trade-protection-and-internal-migration-evidence-from-indonesia"><strong>Global Prices, Trade Protection, and Internal Migration: Evidence from Indonesia</strong></h4>
 <p><a href="/files/Rizki%20Siregar%20-%20JMP.pdf"><em>[Job Market Paper]</em></a></p>
-<p><em>Abstract</em>: I study how regions respond to price shocks in the presence of internal migration. I examine Indonesia in the 2000s as it faced a commodity boom and initiated its trade protection on rice, a staple food for its large population. I use the variation in the potential share of palm-oil and rice sector across district economies to measure local exposure to shocks. I find that districts exposed to palm-oil price shocks had temporarily higher real expenditure per capita compared to the non-exposed ones. These exposed districts also received more migration, providing the evidence that palm-oil price shocks were no longer localized. Meanwhile, exposure to rice price shocks did not materialize as higher purchasing power to exposed districts compared to the non-exposed ones. I estimate that the overall welfare increased by 0.39% in Indonesia between 2005 and 2010, and one third of the increase can be accounted for by internal migration.
+<p><em>Abstract</em>: I study how regions respond to price shocks in the presence of internal migration. I examine Indonesia in the 2000s as it faced a commodity boom and initiated its trade protection on rice, a staple food for its large population. I use the variation in the potential shares of palm oil and rice sectors across district economies to measure local exposure to shocks. I find that districts exposed to palm oil price shocks had temporarily higher real expenditure per capita compared to the non-exposed ones. These exposed districts also received more migration, providing the evidence that palm oil price shocks were no longer localized. Meanwhile, exposure to rice price shocks did not materialize as higher purchasing power to exposed districts compared to the non-exposed ones. I estimate that the overall welfare increased by 0.39% in Indonesia between 2005 and 2010, and one third of the increase can be accounted for by internal migration.
 <br />
 <br /></p>
 <h4 id="understanding-the-global-trade-and-public-health-regime-complex-a-case-study-on-breastfeeding-and-commercial-breastmilk-substitutes"><strong>Understanding the Global Trade and Public Health Regime Complex: A Case Study on Breastfeeding and Commercial Breastmilk Substitutes</strong></h4>
@@ -1360,7 +1360,12 @@
   
   <div class="col-12 col-lg-8">
 
-    <h4 id="reading-the-corona-extraordinary-measures-during-an-extraordinary-time"><strong>Reading the Corona: Extraordinary Measures during an Extraordinary Time</strong></h4>
+    <h4 id="ask-a-mentor-panel-and-info-session-in-humanities-arts-and-social-sciences-and-digital-projects"><strong>&ldquo;Ask a Mentor&rdquo;: Panel and Info Session in Humanities, Arts and Social Sciences and Digital Projects</strong></h4>
+<p>Undergraduate Research Center UC Davis (15 Oct 2020)<br/>
+<a href="https://www.youtube.com/watch?v=qypXWihaUCE&amp;t=4s" target="_blank" rel="noopener">Youtube</a>
+<br />
+<br /></p>
+<h4 id="reading-the-corona-extraordinary-measures-during-an-extraordinary-time"><strong>Reading the Corona: Extraordinary Measures during an Extraordinary Time</strong></h4>
 <p>The Indonesia Project Australian National University Global Seminar Series (25 March 2020)<br/>
 <a href="https://www.youtube.com/watch?v=0cb1mWYLozA&amp;feature=youtu.be" target="_blank" rel="noopener">Youtube</a>, <a href="/files/handout%20-%20Siregar%20et%20al.pdf">Slides</a>
 <br />
