--- a/index.html
+++ b/index.html
@@ -855,6 +855,7 @@
     <p>I am a PhD Candidate in Economics at UC Davis. My research interests are international trade, labor economics, and spatial economics.</p>
 <p>I am on the job market during the 2020-21 academic year. I will be available for interviews at the EEA 2020 Virtual Meeting and the ASSA 2021 Virtual Annual Meeting.</p>
 <p><a href="/files/Rizki%20Siregar%20-%20CV.pdf">Curriculum Vitae</a></p>
+<p><a href="/files/Rizki%20Siregar%20-%20JMP.pdf">Job Market Paper</a></p>
 
 
     <div class="row">
@@ -999,11 +1000,12 @@
 
     <h4 id="global-prices-trade-protection-and-internal-migration-evidence-from-indonesia"><strong>Global Prices, Trade Protection, and Internal Migration: Evidence from Indonesia</strong></h4>
 <p><a href="/files/Rizki%20Siregar%20-%20JMP.pdf"><em>[Job Market Paper]</em></a></p>
-<p><em>Abstract</em>: I study how regions respond to price shocks in the presence of internal migration. I examine Indonesia in the 2000s as it faced a commodity boom and initiated its trade protection on rice, a staple food for its large population. I use the variation in the potential shares of palm oil and rice sectors across district economies to measure local exposure to shocks. I find that districts exposed to palm oil price shocks had temporarily higher real expenditure per capita compared to the non-exposed ones. These exposed districts also received more migration, providing the evidence that palm oil price shocks were no longer localized. Meanwhile, exposure to rice price shocks did not materialize as higher purchasing power to exposed districts compared to the non-exposed ones. I estimate that the overall welfare increased by 0.39% in Indonesia between 2005 and 2010, and one third of the increase can be accounted for by internal migration.
+<p><em>Abstract</em>: I study how regions respond to price shocks in the presence of internal migration. I examine Indonesia in the 2000s as it faced a commodity boom and initiated its trade protection on rice, a staple food for its large population. I use the variation in the potential shares of palm oil and rice sectors across district economies to measure local exposure to shocks. I find that the commodity boom increased the real expenditure per capita of palm-oil producing districts. These districts also received more migration, providing the evidence that palm oil price shocks were no longer localized. However, these relatively higher levels of real expenditure per capita did not last as the commodity boom ends in 2014, highlighting the short-lived windfall for longer-run cost from well-documented deforestation due to palm-oil expansion. Meanwhile, the trade protection on rice did not materialize as higher purchasing power to rice-producing districts, highlighting the ineffectiveness of protection as a second-best policy to structural issues. I estimate that the overall welfare increased by 0.39% in Indonesia between 2005 and 2010. Gains from migration accounts for one third of the these gains.
 <br />
 <br /></p>
 <h4 id="understanding-the-global-trade-and-public-health-regime-complex-a-case-study-on-breastfeeding-and-commercial-breastmilk-substitutes"><strong>Understanding the Global Trade and Public Health Regime Complex: A Case Study on Breastfeeding and Commercial Breastmilk Substitutes</strong></h4>
-<p>with Katheryn Russ, Phillip Baker, Michaela Byrd, Manho Kang, Hammad Zahid, and David McCoy</p>
+<p>with Katheryn Russ, Phillip Baker, Michaela Byrd, Manho Kang, Hammad Zahid, and David McCoy
+<a href="https://katherynruss.weebly.com/uploads/4/5/1/7/45179109/bmstrade_politicaleconomy_2020_09_16_clean.pdf" target="_blank" rel="noopener">[link]</a></p>
 
 
     
