--- a/index.html
+++ b/index.html
@@ -853,6 +853,7 @@
     <h1>Biography</h1>
 
     <p>I am a PhD Candidate in Economics at UC Davis. My research aims to provide guidance in dealing with the distributional impacts of globalization and economic policies.</p>
+<p>I will join the <a href="https://international-policy.economics.uni-mainz.de/" target="_blank" rel="noopener">Chair of International Economic Policy</a> at the <a href="https://wiwi.uni-mainz.de/" target="_blank" rel="noopener">Gutenberg School of Management and Economics at the University of Mainz</a> as a postdoctoral researcher in Summer 2021.</p>
 <p>Research interests: international trade, labor economics, and spatial economics.</p>
 <p><a href="/files/Rizki%20Siregar%20-%20CV.pdf">Curriculum Vitae</a></p>
 <p><a href="/files/Rizki%20Siregar%20-%20JMP.pdf">Job Market Paper</a></p>
